--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^20.14.11"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
