--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.2.0",
     "https-proxy-agent": "^5.0.1",
     "mongoose": "^8.8.1",
     "sekai-api": "github:aamiaa/sekai-api"
