--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-validator": "^7.2.0",
     "https-proxy-agent": "^5.0.1",
     "mongoose": "^8.8.4",
-    "sekai-api": "github:aamiaa/sekai-api"
+    "sekai-api": "github:aamiaa/sekai-api",
+    "sekai-images": "github:aamiaa/sekai-images"
   }
 }
