--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.11"
+    "@types/node": "^20.14.11",
+    "@types/parseurl": "^1.3.3"
   },
   "dependencies": {
     "axios": "^1.7.7",
