--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,7 @@
 		"moduleResolution": "node",
 		"outDir": "dist",
 		"sourceMap": true
-	}
+	},
+	"include": ["src/**/*"],
+	"files": ["src/custom.d.ts"]
 }
