--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^7.2.0",
     "https-proxy-agent": "^5.0.1",
     "mongoose": "^8.9.5",
+    "pythonia": "^1.2.2",
     "sekai-api": "github:aamiaa/sekai-api",
     "sekai-images": "github:aamiaa/sekai-images"
   }
