--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.11",
-    "@types/parseurl": "^1.3.3"
+    "@types/parseurl": "^1.3.3",
+    "node-html-parser": "^7.0.1"
   },
   "dependencies": {
     "axios": "^1.8.2",
