--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.3.0",
     "https-proxy-agent": "^5.0.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.9.5",
     "pythonia": "^1.2.2",
     "sekai-api": "github:aamiaa/sekai-api",
